# Restaurant-Management-System

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  requirements.txt  restaurant_erd.html
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  token_views.py  views.py
backend/apps/menu/: __init__.py  admin.py  filters.py  models.py  serializers.py  views.py
backend/apps/orders/: admin.py  consumers.py  events.py  models.py  serializers.py  views.py
backend/apps/preferences/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: bill_pdf_builder.py  serializers.py  urls.py  views.py
backend/apps/reservations/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/tests/: test_api.py
backend/config/: admin.py  asgi.py  settings.py  urls.py
docs/: frontend-test-cases.md  project-diagrams.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: auth-provider.jsx  dashboard-layout.jsx  dashboard-sidebar.jsx  data-state.jsx  order-additions-modal.jsx  order-notification-center.jsx  page-shell.jsx  protected-route.jsx  protected-route.test.jsx  section-page-ui.jsx
frontend/src/data/: dashboard-data.js
frontend/src/hooks/: use-async-data.js  use-auth.js  use-order-events.js
frontend/src/lib/: api.js  formatters.js  navigation.js  order-utils.js  reservation-utils.js
(+43 files in other folders)
